# haskell-language-server

./: .cirrus.yml  .editorconfig  .ghci  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .stylish-haskell.yaml  9.10  BUILD.bazel  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  FUNDING.yml  GNUmakefile  GenChangelogs.hs  Makefile  NOTES.md  README.md  RELEASING.md  azure-pipelines.yml  cabal-benchmark.project  cabal-ghc90.project  cabal-ghc901.project  cabal-ghc901.project.local  cabal-ghc902.project  cabal-ghc914.project  cabal-ghc92.project  cabal-ghc921.project  cabal-hls-install  cabal-hls-install.cmd  cabal-ide-install.cmd  cabal.project  (+71 more)
.github/generate-ci/: README.mkd  gen_ci.hs  generate-ci.cabal  generate-jobs
cabal-parser/: CHANGELOG.md  LICENSE  cabal-parser.cabal
cabal-parser/exe/: Main.hs  Options.hs
cabal-parser/src/Text/Cabal/: Data.hs  Parser.hs  Types.hs  Value.hs
cabal-parser/test/: Main.hs  Parser.hs
ghcide/: .editorconfig  .ghci  .gitignore  .hlint.yaml  .stylish-haskell.yaml  BUILD.bazel  CHANGELOG.md  README.md  azure-pipelines.yml  cabal.project  fmt.sh  ghcide.cabal  haskell-ide-core.cabal  hie-core-daml.sh  hie-core.cabal  hie-stack.yaml  hie.yaml  hie.yaml.cbl  hie.yaml.stack  install.bat  shell.nix  stack-ghc-lib.yaml  stack-windows.yaml  stack.yaml  stack810.yaml  stack8101.yaml  stack84.yaml  stack88.yaml
ghcide-bench/: README.md  ghcide-bench.cabal
ghcide-bench/exe/: Main.hs
ghcide-bench/src/: Experiments.hs
ghcide-bench/src/Experiments/: Types.hs
ghcide-bench/test/: Main.hs
ghcide/.azure/: linux-bench.yml  linux-stack.yml  windows-stack.yml
ghcide/.github/workflows/: bench.yml  nix.yml  test.yml
ghcide/bench/: Main.hs  README.md  config.yaml  hist.yaml
ghcide/bench-results/: .artifactignore
ghcide/bench/Hist/: Main.hs
ghcide/bench/example/: HLS
ghcide/bench/exe/: Main.hs
ghcide/bench/hist/: Main.hs
ghcide/bench/lib/: Experiments.hs
ghcide/cbits/: getmodtime.c
ghcide/docs/: Setup.md  opentelemetry.md
ghcide/exe/: Arguments.hs  Main.hs  RuleTypes.hs  Rules.hs  Util.hs  Utils.hs
ghcide/extension/: package-lock.json  package.json
ghcide/extension/src/: extension.ts
ghcide/ghcide-test-utils/: ghcide-test-utils.cabal
ghcide/include/: ghc-api-version.h
ghcide/nix/: default.nix  sources.json  sources.nix
ghcide/src/Development/: IDE.hs
ghcide/src/Text/: Fuzzy.hs
ghcide/test/: BUILD.bazel  Demo.hs  LICENSE  ghcide-test-utils.cabal  ghcide-tests.cabal
ghcide/test/data/: Bar.hs  GotoHover.hs
ghcide/test/exe/: AsyncTests.hs  BootTests.hs  CPPTests.hs  ClientSettingsTests.hs  CodeLensTests.hs  CompletionTests.hs  Config.hs  CradleTests.hs  Dependency.hs  DependentFileTest.hs  DiagnosticTests.hs  ExceptionTests.hs  FindDefinitionAndHoverTests.hs  FindImplementationAndHoverTests.hs  FuzzySearch.hs  GarbageCollectionTests.hs  HaddockTests.hs  HieDbRetry.hs  HighlightTests.hs  IfaceTests.hs  ImportCycleTests.hs  InitializeResponseTests.hs  InlayHintTests.hs  LogType.hs  Main.hs  NonLspCommandLine.hs  OpenCloseTest.hs  OutlineTests.hs  PluginParsedResultTests.hs  PluginSimpleTests.hs  PositionMappingTests.hs  PreprocessorTests.hs  Progress.hs  ReferenceTests.hs  ResolveTests.hs  RootUriTests.hs  SafeTests.hs  SymlinkTests.hs  THTests.hs  TestUtils.hs  (+2 more)
ghcide/test/preprocessor/: Main.hs
hie-compat/: CHANGELOG.md  LICENSE  README.md  hie-compat.cabal
hie-compat/src-ghc810/Compat/: HieAst.hs  HieBin.hs
hie-compat/src-ghc86/Compat/: HieAst.hs  HieBin.hs  HieDebug.hs  HieTypes.hs  HieUtils.hs
hie-compat/src-ghc88/Compat/: HieAst.hs  HieBin.hs
hie-compat/src-ghc901/Compat/: HieAst.hs  HieBin.hs  HieDebug.hs
hie-compat/src-ghc902/Compat/: HieAst.hs
hie-compat/src-ghc92/Compat/: HieAst.hs
hie-compat/src-reexport-ghc9/Compat/: HieAst.hs  HieBin.hs  HieTypes.hs  HieUtils.hs
hie-compat/src-reexport-ghc92/Compat/: HieAst.hs  HieDebug.hs
hie-compat/src-reexport/Compat/: HieDebug.hs  HieTypes.hs  HieUtils.hs
hls-exactprint-utils/: hls-exactprint-utils.cabal
hls-exactprint-utils/src/Ide/: TreeTransform.hs
hls-graph/: README.md  hls-graph.cabal
hls-graph/html/: README.md  profile.html  shake.js
hls-graph/html/ts/: environment.ts  jquery.flot.d.ts  profile.tsx  search.tsx  types.ts
hls-graph/src/: Paths.hs  PathsHlsGraph.hs
hls-graph/test/: ActionSpec.hs  DatabaseSpec.hs  Example.hs  Main.hs  RulesSpec.hs
hls-plugin-api/: .stylish-haskell.yaml  hls-plugin-api.cabal
hls-plugin-api/bench/: Main.hs
hls-plugin-api/src/Ide/: Compat.hs  Logger.hs  Plugin.hs  PluginUtils.hs  TempLSPTypeFunctions.hs  Types.hs
hls-plugin-api/test/: Main.hs
hls-plugin-api/test/Ide/: PluginUtilsTest.hs  TypesTests.hs
hls-test-utils/: hls-test-utils.cabal
hls-test-utils/src/Test/: Hls.hs
install/: README.md  cabal.project  hie-install.cabal  hie-stack.yaml  hie.yaml.cbl  hls-install.cabal  shake.project  shake.yaml  stack.yaml
install/src/: BuildSystem.hs  Cabal.hs  Env.hs  Help.hs  HieInstall.hs  HlsInstall.hs  Print.hs  Stack.hs  Utils.hs  Version.hs
plugins/hlint-hls-plugin/: hlint-hls-plugin.cabal
plugins/hls-alias-import-plugin/: hls-alias-import-plugin.cabal
plugins/hls-alternate-number-format-plugin/: README.md  hls-alternate-number-format-plugin.cabal
plugins/hls-alternate-number-format-plugin/test/: Main.hs
plugins/hls-brittany-plugin/: hls-brittany-plugin.cabal
plugins/hls-brittany-plugin/test/: Main.hs  Server.hs
plugins/hls-cabal-fmt-plugin/: hls-cabal-fmt-plugin.cabal
plugins/hls-cabal-fmt-plugin/test/: Main.hs
plugins/hls-cabal-plugin/: CHANGELOG.md  LICENSE  hls-cabal-plugin.cabal
plugins/hls-cabal-plugin/test/: CabalAdd.hs  CabalInfoParser.hs  CodeActions.hs  Completer.hs  Context.hs  Definition.hs  FoldingRange.hs  Main.hs  Outline.hs  Utils.hs  Workspace.hs
plugins/hls-cabal-project-plugin/: hls-cabal-project-plugin.cabal
plugins/hls-cabal-project-plugin/test/: Completer.hs  Main.hs  Utils.hs
shake-bench/: LICENSE  shake-bench.cabal
(+3193 files in other folders)
