cabal-version:      1.20
build-type:         Simple
category:           Development
name:               ghcide
version:            0.0.4
license:            Apache-2.0
license-file:       LICENSE
author:             Digital Asset
maintainer:         Digital Asset
copyright:          Digital Asset 2018-2019
synopsis:           The core of an IDE
description:
    A library for building Haskell IDE's on top of the GHC API.
homepage:           https://github.com/digital-asset/ghcide#readme
bug-reports:        https://github.com/digital-asset/ghcide/issues
tested-with:        GHC==8.6.5
extra-source-files: include/ghc-api-version.h README.md CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/digital-asset/ghcide.git

flag ghc-lib
  description: build against ghc-lib instead of the ghc package
  default: False
  manual: True

library
    default-language:   Haskell2010
    build-depends:
        aeson,
        async,
        base == 4.*,
        binary,
        bytestring,
        containers,
        data-default,
        deepseq,
        directory,
        extra,
        filepath,
        hashable,
        haskell-lsp-types >= 0.17,
        haskell-lsp >= 0.17,
        mtl,
        network-uri,
        prettyprinter-ansi-terminal,
        prettyprinter-ansi-terminal,
        prettyprinter,
        rope-utf16-splay,
        safe-exceptions,
        shake >= 0.17.5,
        sorted-list,
        stm,
        syb,
        text,
        time,
        transformers,
        unordered-containers,
        utf8-string,
        hslogger
    if flag(ghc-lib)
      build-depends:
        ghc-lib >= 8.8,
        ghc-lib-parser >= 8.8
      cpp-options: -DGHC_LIB
    else
      build-depends:
        ghc-boot-th,
        ghc-boot,
        ghc >= 8.4
    if !os(windows)
      build-depends:
        unix
      c-sources:
        cbits/getmodtime.c

    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns

    hs-source-dirs:
        src
    include-dirs:
        include
    exposed-modules:
        Development.IDE.Core.FileStore
        Development.IDE.Core.OfInterest
        Development.IDE.Core.PositionMapping
        Development.IDE.Core.Rules
        Development.IDE.Core.RuleTypes
        Development.IDE.Core.Service
        Development.IDE.Core.Shake
        Development.IDE.GHC.Util
        Development.IDE.Import.DependencyInformation
        Development.IDE.LSP.LanguageServer
        Development.IDE.LSP.Protocol
        Development.IDE.LSP.Server
        Development.IDE.Types.Diagnostics
        Development.IDE.Types.Location
        Development.IDE.Types.Logger
        Development.IDE.Types.Options
    other-modules:
        Development.IDE.Core.Debouncer
        Development.IDE.Core.Compile
        Development.IDE.Core.Preprocessor
        Development.IDE.GHC.Compat
        Development.IDE.GHC.CPP
        Development.IDE.GHC.Error
        Development.IDE.GHC.Orphans
        Development.IDE.GHC.Warnings
        Development.IDE.Import.FindImports
        Development.IDE.LSP.CodeAction
        Development.IDE.LSP.Definition
        Development.IDE.LSP.Hover
        Development.IDE.LSP.Notifications
        Development.IDE.Spans.AtPoint
        Development.IDE.Spans.Calculate
        Development.IDE.Spans.Documentation
        Development.IDE.Spans.Type
    ghc-options: -Wall -Wno-name-shadowing

executable ghcide
    if flag(ghc-lib)
      buildable: False
    default-language:   Haskell2010
    hs-source-dirs:     exe
    ghc-options: -threaded -Wall -Wno-name-shadowing
    main-is: Main.hs
    build-depends:
        hslogger,
        base == 4.*,
        containers,
        data-default,
        directory,
        extra,
        filepath,
        ghc-paths,
        ghc,
        haskell-lsp,
        hie-bios >= 0.2 && < 0.3,
        ghcide,
        optparse-applicative,
        shake,
        text
    other-modules:
        Arguments
        Paths_ghcide

    default-extensions:
        RecordWildCards
        TupleSections
        ViewPatterns

test-suite ghcide-tests
    if flag(ghc-lib)
      buildable: False
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-tool-depends:
        ghcide:ghcide
    build-depends:
        base,
        containers,
        directory,
        extra,
        filepath,
        --------------------------------------------------------------
        -- The MIN_GHC_API_VERSION macro relies on MIN_VERSION pragmas
        -- which require depending on ghc. So the tests need to depend
        -- on ghc if they need to use MIN_GHC_API_VERSION. Maybe a
        -- better solution can be found, but this is a quick solution
        -- which works for now.
        ghc,
        --------------------------------------------------------------
        haskell-lsp-types,
        lens,
        lsp-test >= 0.8,
        parser-combinators,
        tasty,
        tasty-hunit,
        tasty-expected-failure,
        text
    hs-source-dirs: test/cabal test/exe test/src
    include-dirs: include
    ghc-options: -threaded -Wall -Wno-name-shadowing
    main-is: Main.hs
    other-modules:
        Development.IDE.Test
        Development.IDE.Test.Runfiles
    default-extensions:
        OverloadedStrings
